--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This website is2cool</h1>
-    <p>Welcome to this site!</p>
+    <p>Welcome to this nice site!</p>
     <p>Sebastian!</p>
     <p>By Simon!</p>
 </body>
